# tuige

./: Cargo.toml  README.md  flake.nix
src/: config.rs  event.rs  main.rs  request.rs  tui.rs
