[package]
name = "tuige"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
eyre = "0.6.12"
crossterm = { version = "0.28.0", features = ["event-stream"] }
ratatui = "0.28.0"
ratatui-image = "1.0.5"
serde = { version = "1.0.205", features = ["derive"] }
tmi = "0.7.1"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
futures = "0.3.30"
indexmap = "2.3.0"
tui-textarea = "0.6.1"
memchr = "2.7.4"
triomphe = "0.1.13"
